# glassypdm-client

./: .gitignore  .prettierignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1720995614914-5b28082ab9f52.mjs
.github/workflows/: release.yml  tauri.yml  test.yml
src/: App.css  App.tsx  Button.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  foo.json  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 1_init.sql  2_cache_setting.sql  3_local_ignore.sql  4_hehehe.sql
src-tauri/src/: changes.rs  config.rs  dal.rs  download.rs  file.rs  main.rs  network.rs  project.rs  reset.rs  settings.rs  sync.rs  types.rs  upload.rs  util.rs
src-tauri/src/commands/: mod.rs  project.rs
src/components/: About.tsx  Account.tsx  CheckboxReactHookFormMultiple.tsx  DownloadColumns.tsx  DownloadPage.tsx  DownloadTable.tsx  FileColumn.tsx  FileSelectForm.tsx  FileTable.tsx  History.tsx  HistoryLoader.tsx  LocalChanges.tsx  PendingFile.tsx  PermissionDashboard.tsx  Settings.tsx  SettingsLoader.tsx  Sidebar.tsx  UploadPage.tsx  Workbench.tsx  WorkbenchLoader.tsx  loading.tsx  refetching.tsx
src/components/auth/: forgot.tsx
src/components/file/: DownloadFileRevisionButton.tsx  FileColumn.tsx  FileRevisionColumn.tsx  FileRevisionTable.tsx  FileTable.tsx
src/components/settings/: SettingsSection.tsx  serverfolder.tsx
src/components/team/: InviteMember.tsx  MemberColumn.tsx  MemberPopover.tsx  PGroupBadge.tsx  dashboard.tsx  pgroupcolumn.tsx  pgroupconfig.tsx  pgroupdashboard.tsx  pgrouptable.tsx
src/components/ui/: badge.tsx  data-table.tsx  dialog.tsx  pagination.tsx  scroll-area.tsx  tabs.tsx  toast.tsx  use-toast.ts
src/lib/: HistoryLoader.tsx  WorkbenchLoader.tsx  types.tsx  utils.ts
src/pages/: About.tsx  Account.tsx  DownloadPage.tsx  History.tsx  ProjectPage.tsx  Settings.tsx  UploadPage.tsx  Workbench.tsx
src/routes/: __root.tsx  _app.tsx  about.lazy.tsx  index.tsx  owo.tsx  serversetup.tsx
src/routes/_app/: _workbench.tsx  download.tsx  signin.tsx  signup.tsx  upload.tsx
src/routes/_app/_workbench/: dashboard.tsx  projects.$pid.files.tsx  projects.$pid.history.$commit.tsx  projects.$pid.history.index.tsx  projects.$pid.history.tsx  projects.$pid.settings.tsx  projects.$pid.sync.tsx  projects.$pid.tsx  projects.index.tsx  settings.tsx  teams.$teamid.manage.tsx  teams.$teamid.members.tsx  teams.$teamid.orders.index.tsx  teams.$teamid.orders.options.tsx  teams.$teamid.pgroups.tsx  teams.$teamid.tsx  teams.index.tsx  teams.tsx  workbench.tsx
src/routes/_app/_workbench/projects/: $pid.tsx  index.tsx
src/routes/_app/_workbench/projects/$pid/: files.tsx  history.$commit.tsx  history.index.tsx  settings.tsx  sync.tsx
