[package]
name = "glassy_pdm_client"
version = "0.6.0"
description = "glassyPDM"
authors = ["Joshua Tenorio"]
license = "GPL"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.2", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.0.0-rc.0"
tauri-plugin-dialog = "2.0.0-rc.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.39.3", features = ["full", "rt-multi-thread"] }
merkle_hash = "3.5"
reqwest = { version = "0.11.20", features = ["multipart", "blocking", "json"] }
thiserror = "1.0.51"
futures = "0.3.29"
rayon = "1.10.0"
tauri-plugin-updater = "2.0.0-rc.0"
tauri-plugin-notification = "2.0.0-rc.0"
fs-chunker = "0.5.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
