[package]
name = "glassy_pdm_client"
version = "0.7.3"
description = "glassyPDM"
authors = ["Joshua Tenorio"]
license = "GPL"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.2", features = [] }
tauri-plugin-shell = "2.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.0.1"
tauri-plugin-dialog = "2.0.1"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.39.3", features = ["full", "rt-multi-thread"] }
merkle_hash = { version = "3.8", features = ["bincode"] }
reqwest = { version = "0.11.20", features = ["multipart", "blocking", "json"] }
thiserror = "1.0.51"
futures = "0.3.29"
rayon = "1.10.0"
tauri-plugin-updater = "2.0.2"
fs-chunker = "0.5.0"
tauri-plugin-log = "2.0.1"
log = "0.4"
fs_extra = "1.3.0"
bincode = "2.0.1"
#specta = { version = "=2.0.0-rc.20" }
#tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
#specta-typescript = "0.0.7"
# cap = { version = "0.1.2", features = ["stats"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
